--- a/manifests/deploy-microservice.yml
+++ b/manifests/deploy-microservice.yml
@@ -2,10 +2,10 @@ kind: Deployment
 apiVersion: apps/v1
 metadata:
     labels:
-        app: mild-temper-microservice
+        app: raj-solo-microservice
         stack: frontend
         source: demo
-    name: mild-temper-microservice
+    name: raj-solo-microservice
     namespace: microservices
 spec:
     replicas: 3
@@ -15,13 +15,13 @@ spec:
     template:
         metadata:
             labels:
-                app: mild-temper-microservice
-                run: mild-temper-microservice
+                app: raj-solo-microservice
+                run: raj-solo-microservice
                 source: demo
         spec:
             containers:
-                -   image: 219099013464.dkr.ecr.us-west-2.amazonaws.com/mild-temper-microservice
-                    name: mild-temper-microservice
+                -   image: 219099013464.dkr.ecr.us-west-2.amazonaws.com/raj-solo-microservice
+                    name: raj-solo-microservice
                     ports:
                         -   name: web
                             containerPort: 8080
